<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.AddBusinessCardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_add_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/txv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="60dp"
                android:text="@string/text_new_card"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_go_back"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_go_back"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="18dp"
                android:background="@color/white"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                app:icon="@drawable/ic_arrow_back"
                app:iconPadding="0dp"
                app:iconSize="30dp"
                app:iconTint="?attr/colorSecondaryVariant"
                app:layout_constraintBottom_toBottomOf="@+id/txv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txv_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txv_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tx_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_hint_name"
                    android:maxLength="50"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_layout_company"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tx_input_layout_name"
                app:layout_constraintStart_toStartOf="@+id/tx_input_layout_name"
                app:layout_constraintTop_toBottomOf="@+id/tx_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tx_input_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_hint_company"
                    android:maxLength="50"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_layout_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tx_input_layout_company"
                app:layout_constraintStart_toStartOf="@+id/tx_input_layout_company"
                app:layout_constraintTop_toBottomOf="@+id/tx_input_layout_company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tx_input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_hint_contact_phone"
                    android:inputType="number"
                    android:maxLength="20"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tx_input_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tx_input_layout_phone"
                app:layout_constraintStart_toStartOf="@+id/tx_input_layout_phone"
                app:layout_constraintTop_toBottomOf="@+id/tx_input_layout_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tx_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_hint_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardview_preview"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/gray_2"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_colors"
                app:layout_constraintEnd_toEndOf="@+id/toggle_button_colors"
                app:layout_constraintTop_toBottomOf="@+id/toggle_button_colors">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preview"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_colors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:checkedButton="@id/button_back_color"
                app:layout_constraintEnd_toEndOf="@+id/tx_input_layout_email"
                app:layout_constraintStart_toStartOf="@+id/tx_input_layout_email"
                app:layout_constraintTop_toBottomOf="@+id/tx_input_layout_email"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/button_back_color"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/background_color"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_text_color"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_color"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_colors"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginEnd="8dp"
                android:background="@color/gray"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/cardview_preview"
                app:layout_constraintStart_toStartOf="@+id/toggle_button_colors"
                app:layout_constraintTop_toBottomOf="@+id/toggle_button_colors"
                tools:listitem="@layout/item_color" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_colors" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>